# chargebot

./: Cargo.toml  Dockerfile  Makefile  README.md  example-config.yaml
.github/workflows/: build_test_push.yaml
deploy/: Makefile  fly.toml
deploy/embed-config/: Dockerfile  Makefile  README.md
src/: bot.rs  config.rs  datasource.rs  logging.rs  main.rs  metrics.rs  whatever.rs
src/flo/: client.rs  mod.rs  models.rs  watch.rs
src/telegram/: client.rs  mod.rs  models.rs  output.rs  polling.rs  webhook.rs
src/utils/: error.rs  filters.rs  metrics.rs  mod.rs  retry.rs  testing.rs
