[package]
name = "chargebot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
backoff = "0.4"
clap = "4.5"
prometheus-client = "0.23"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
serde_yaml = "0.9"
tokio = { version = "1.45", features = ["rt", "rt-multi-thread", "macros", "signal", "sync"] }
url = "2.5"
validator = { version = "0.20", features = ["derive"] }
warp = "0.3"
snafu = "0.8"
valuable = { version = "0.1", features = ["derive"] }
regex = "1.11"

tracing = { version = "0.1", features = ["valuable"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "json",
    "fmt",
    "valuable",
    "registry",
] }
